# bsc

./: .gitignore  CMakeLists.txt  README.md  contributors.txt  expose.tex  literature.bib
docker/: Dockerfile  README.md
drafts/: chapters.txt  eval.md  impl.md
expose/: CMakeLists.txt  expose.tex
thesis/: CMakeLists.txt  appl.tex  bench_env.tex  build-all.bat  build-all.sh  build-docker.sh  build-thesis.bat  build-thesis.sh  conclusion.tex  eval.tex  goals.tex  impl.tex  intro.tex  jail_setup.tex  literature.bib  related.tex  related_work.tex  rsq.tex  tables.tex  thesis.tex
thesis/graphics/: impl_sd_key_management.uxf
thesis/umlet-figures/: impl_base64_overview.uxf  impl_checkconf.uxf  impl_checkconf_1.pdf_tex  impl_crypto_overview.uxf  impl_decrypt.uxf  impl_decrypt_1.pdf_tex  impl_elektra_state.uxf  impl_encrypt.uxf  impl_encrypt_1.pdf_tex
