# Copyright (C) 2015 Peter Nirschl.
#
# This document is released under the terms of the Creative Commons Attribution-ShareAlike 4.0 International License.
# For further information, please refer to:  http://creativecommons.org/licenses/by-sa/4.0/
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(BachelorThesis NONE)
INCLUDE(UseLATEX.cmake)

ADD_SUBDIRECTORY(expose)
